--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "trailingComma": "all",
   "bracketSameLine": true,
   "endOfLine": "auto",
-  "singleQuote": true
+  "singleQuote": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
