--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "axios": "^1.6.8",
     "next": "14.2.3",
-    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18"
   },
@@ -22,6 +21,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
+    "prettier": "^3.3.2",
+    "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
