--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "framer-motion": "^11.2.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
